# AI-Pet-robot-for-mental-health-and-personal-assistance

./: .env copy  .env.example  .gitignore  AUTONOMOUS_NAVIGATION.md  EMOTION_DISPLAY_UPDATE.md  FEATURES_GUIDE.md  FIX_LOCALHOST_CONNECTION.md  Hardwear_notes.Md  IMPLEMENTATION_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDUSTRIAL_FEATURES.md  MULTI_PORT_IMPLEMENTATION.md  PR_SUMMARY.md  QUICK_REFERENCE.md  README.md  ROS_SETUP_GUIDE.md  SECURITY.md  SETUP_GUIDE.md  SPEAKER_SETUP_GUIDE.md  USER_GUIDE.md  VENV_SETUP.md  check_models.py  docker-compose.yml  geminitalk.py  multimodel.py  pet_robot_ros  requirements.txt  test_implementation.py  verify_ports.py
Documentations/: ARCHITECTURE_UPDATE_SUMMARY.md  AUTONOMOUS_NAVIGATION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_UPDATE.md  MENTAL_HEALTH_FEATURES.md  MULTI_PORT_IMPLEMENTATION.md  NEW_FEATURES_SUMMARY.md  QUICK_START_EMOTION_DISPLAY.md  SPEAKER_SETUP_GUIDE.md  report_of_updates.md
downloads/: 4-wheel-setup-guide.md  api-integration.md  face-display.md  hardware-code.md  multimodal-api-guide.md  robot-architecture.md  setup-guide-wifi.md  setup-guide.md
frontend/: emotion_display.html  face_display.html  styles.css
mobile_app/: .flutter-plugins-dependencies  README.md  pubspec.yaml
ros_workspace/src/pet_robot_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
ros_workspace/src/pet_robot_ros/action/: BreathingExercise.action
ros_workspace/src/pet_robot_ros/config/: mental_health_params.yaml  robot_params.yaml
ros_workspace/src/pet_robot_ros/launch/: mental_health.launch  pet_robot.launch  ros_bridge.launch
ros_workspace/src/pet_robot_ros/msg/: Emotion.msg  MoodLog.msg  RobotState.msg  SensorData.msg
ros_workspace/src/pet_robot_ros/nodes/: emotion_node.py  mental_health_node.py  robot_controller_node.py  ros_server_bridge.py
ros_workspace/src/pet_robot_ros/scripts/: test_robot.py
ros_workspace/src/pet_robot_ros/srv/: GetAffirmation.srv  LogMood.srv  SetEmotion.srv
server/: Dockerfile  QUICK_START.md  TROUBLESHOOTING.md  autonomous_navigation.py  camera_stream_manager.py  check_dependencies.py  demo_startup.txt  emotion_detection_server.py  emotion_display_server.py  gemini_integration.py  launch_all.py  mobile_web_server.py  requirements.txt  server.py  shared_state.py  smart_home_integration.py  test_autonomous_navigation.py  (+3 more)
(+145 files in other folders)
