<?xml version="1.0"?>
<package format="2">
  <name>pet_robot_ros</name>
  <version>1.0.0</version>
  <description>ROS package for AI Pet Robot with mental health support features</description>
  
  <maintainer email="support@petrobot.com">Pet Robot Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Core ROS dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  
  <!-- Custom message dependencies -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>
